fixed alignment of delete buttons

--- a/app/assets/stylesheets/pages/edit.scss
+++ b/app/assets/stylesheets/pages/edit.scss
@@ -39,3 +39,10 @@ input:placeholder-shown {
   color: #781115;
   text-decoration: none;
 }
+
+.delete-btn-margin-bottom {
+  margin-bottom: 1rem;
+}
+.fields-delete-btn-margin-bottom {
+  margin-bottom: -8.1px;
+}
